Modified templated with bootstarp grid system

--- a/wedding/templates/about.html
+++ b/wedding/templates/about.html
@@ -80,7 +80,7 @@
 
             <!-- Page Heading/Breadcrumbs -->
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-xs-8">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     {% for field in form %}
                         <div class="fieldWrapper">
                             {{ field.errors }}
@@ -100,7 +100,7 @@
 
             <!-- Content Row -->
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-xs-8">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
 
                 </div>
             </div>
@@ -109,7 +109,7 @@
         <!-- /.container -->
 
         <hr>
-        <div class="panel-footer clearfix">
+        <div class="panel-footer clearfix navbar-fixed-bottom">
             <div class="pull-right">
         	    <a href="/">Home</a>
             	<a href="/terms/">Terms of use</a>
