--- a/wedding/templates/account/email_confirm.html
+++ b/wedding/templates/account/email_confirm.html
@@ -8,30 +8,24 @@
 
 
 {% block content %}
-    <div class='container'>
-        <div class="row">
-            <div class='col-lg-9 col-md-10 col-xs-5 body_color'>
-                <h1>{% trans "Confirm E-mail Address" %}</h1>
+    <h1>{% trans "Confirm E-mail Address" %}</h1>
 
-                {% if confirmation %}
+    {% if confirmation %}
 
-                {% user_display confirmation.email_address.user as user_display %}
+    {% user_display confirmation.email_address.user as user_display %}
 
-                <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{email}}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+    <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{email}}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
-                <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-                {% csrf_token %}
-                    <button type="submit">{% trans 'Confirm' %}</button>
-                </form>
+    <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+    {% csrf_token %}
+        <button type="submit">{% trans 'Confirm' %}</button><br><br><br>
+    </form>
 
-                {% else %}
+    {% else %}
 
-                {% url 'account_email' as email_url %}
+    {% url 'account_email' as email_url %}
 
-                <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url}}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+    <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url}}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
-                {% endif %}
-            </div>
-        </div>
-    </div>
+    {% endif %}
 {% endblock %}
