--- a/wedding/templates/account/logout.html
+++ b/wedding/templates/account/logout.html
@@ -6,22 +6,15 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-    <div class='container'>
-        <div class="row">
-            <div class='col-lg-9 col-md-10 col-xs-5 body_color'>
-                <h1>{% trans "Sign Out" %}</h1>
+    <h1>{% trans "Sign Out" %}</h1>
 
-                <p>{% trans 'Are you sure you want to sign out?' %}</p>
+    <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
-                <form method="post" action="{% url 'account_logout' %}">
-                  {% csrf_token %}
-                  {% if redirect_field_value %}
-                  <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value}}"/>
-                  {% endif %}
-                  <button type="submit">{% trans 'Sign Out' %}</button>
-                </form>
-            </div>
-        </div>
-    </div>
-
+    <form method="post" action="{% url 'account_logout' %}">
+      {% csrf_token %}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value}}"/>
+      {% endif %}
+      <button type="submit">{% trans 'Sign Out' %}</button><br><br><br>
+    </form>
 {% endblock %}
