--- a/wedding/templates/account/password_change.html
+++ b/wedding/templates/account/password_change.html
@@ -6,18 +6,11 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <div class='container'>
-        <div class="row">
-            <div class='col-lg-9 col-md-10 col-xs-5 body_color'>
+    <h1>{% trans "Change Password" %}</h1>
 
-                <h1>{% trans "Change Password" %}</h1>
-
-                <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" name="action">{% trans "Change Password" %}</button>
-                </form>
-            </div>
-        </div>
-    </div>
+    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" name="action">{% trans "Change Password" %}</button><br><br><br>
+    </form>
 {% endblock %}
