--- a/wedding/templates/account/password_reset.html
+++ b/wedding/templates/account/password_reset.html
@@ -7,28 +7,20 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+    <h1>{% trans "Password Reset" %}</h1>
+    {% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
 
-    <div class='container'>
-        <div class="row">
-            <div class='col-lg-9 col-md-10 col-xs-5 body_color'>
+    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-                <h1>{% trans "Password Reset" %}</h1>
-                {% if user.is_authenticated %}
-                {% include "account/snippets/already_logged_in.html" %}
-                {% endif %}
+    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="{% trans "Reset My Password" %}" />
+    </form>
 
-                <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" value="{% trans "Reset My Password" %}" />
-                </form>
-
-                <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-            </div>
-        </div>
-    </div>
+    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p><br><br><br>
 {% endblock %}
 
 {% block extra_body %}
