--- a/wedding/templates/contact.html
+++ b/wedding/templates/contact.html
@@ -80,7 +80,7 @@
 
             <!-- Page Heading/Breadcrumbs -->
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-xs-8">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     {% for field in form %}
                         <div class="fieldWrapper">
                             {{ field.errors }}
@@ -101,7 +101,7 @@
             <!-- Content Row -->
             <div class="row">
                 <!-- Map Column -->
-                <div class="col-lg-8 col-md-8 col-xs-12">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                     <!-- Embedded Google Map -->
                     <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=28.7210643,77.1154368&amp;spn=56.506174,79.013672&amp;t=m&amp;z=15&amp;output=embed"></iframe>
                 </div>
@@ -141,15 +141,18 @@
             <!-- Contact Form -->
             <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
             <div class="row">
-                <div class="col-xs-8">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <h3>Send us a Message</h3>
                     <form method="post" action="" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="control-group form-group">
                             <div class="controls form_control">
                                 <div class="row">
-                                    <div class="col-xs-3">
-                                        {{form.as_p}}
+                                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                                        {% for field in form %}
+                                            {{ field.label_tag }}<br>
+                                            {{ field }}<br><br>
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
@@ -157,7 +160,7 @@
 
                         <div id="success"></div>
                         <!-- For success/fail messages -->
-                        <button type="submit" class="btn btn-primary">Send Message</button>
+                        <button type="submit" class="btn btn-primary">Send Message</button><br><br><br>
                     </form>
                 </div>
             </div>
@@ -166,7 +169,7 @@
         <!-- /.container -->
 
         <hr>
-        <div class="panel-footer clearfix">
+        <div class="panel-footer clearfix navbar-fixed-bottom">
             <div class="pull-right">
         	    <a href="/">Home</a>
             	<a href="/terms/">Terms of use</a>
