--- a/wedding/templates/contact_thanks.html
+++ b/wedding/templates/contact_thanks.html
@@ -80,10 +80,10 @@
 
             <!-- Page Heading/Breadcrumbs -->
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-xs-8">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <h2>Thanks for contacting us</h2>
                     <p>We will get back to you shortly</p><br><br>
-                    <a href='/'><button type="submit" class="btn btn-primary">Go Home</button></a>
+                    <a href='/'><button type="submit" class="btn btn-primary">Go Home</button></a><br><br><br>
                 </div>
             </div>
             <!-- /.row -->
@@ -91,7 +91,7 @@
         <!-- /.container -->
 
         <hr>
-        <div class="panel-footer clearfix">
+        <div class="panel-footer clearfix navbar-fixed-bottom">
             <div class="pull-right">
         	    <a href="/">Home</a>
             	<a href="/terms/">Terms of use</a>
