--- a/wedding/templates/themes/default/audio/audio_list.html
+++ b/wedding/templates/themes/default/audio/audio_list.html
@@ -1,6 +1,4 @@
 {% extends "themes/default/index.html" %}
-{% include "common_audiofield.html" %}
-{% load url from future %}
 {% load date_diff %}
 
 {% block head %}
@@ -12,7 +10,7 @@
          */
 
         .thumb {
-            margin-bottom: 50px;
+            margin-bottom: 20px;
         }
     </style>
 
@@ -119,37 +117,25 @@
 {% endblock %}
 
 {% block content %}
-    <!-- Page Content -->
-    <div class="container">
-        <div class="row">
+    <h1 class="page-header">Music Album</h1>
 
-            <div class="col-lg-8 body_color">
-                <h1 class="page-header">Music Album</h1>
+    {% if object_list %}
+        {% for audio in object_list %}
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-8 thumb">
+                <a class='href_color' href='{{MEDIA_URL}}{{audio.audio_file}}'>{{audio.name}}</a>
+                {% if logged_user.is_authenticated %}
+                    <form action="{% url 'audio_update' username=logged_user.username pk=audio.pk %}">
+                        <input type="submit" value="Edit Audio" class="btn btn-primary">
+                    </form>
+                    <form action="{% url 'audio_delete' username=logged_user.username pk=audio.pk %}">
+                        <input type="submit" value="Delete Audio" class="btn btn-primary">
+                    </form>
+                {% endif %}
             </div>
-
-            {% if object_list %}
-                {% for audio in object_list %}
-                    <div class="col-lg-3 col-md-4 col-xs-4 thumb body_color">
-                            <a class='href_color' href='{{MEDIA_URL}}{{audio.audio_file}}'>{{audio.name}}</a>
-                            {% if logged_user.is_authenticated %}
-                                <form action="{% url 'audio_update' username=logged_user.username pk=audio.pk %}">
-                                    <input type="submit" value="Edit Audio" class="btn btn-primary">
-                                </form>
-                                <form action="{% url 'audio_delete' username=logged_user.username pk=audio.pk %}">
-                                    <input type="submit" value="Delete Audio" class="btn btn-primary">
-                                </form>
-                            {% endif %}
-                    </div>
-                {% endfor %}
-            {% else %}
-                <div class="col-lg-3 col-md-4 col-xs-4 thumb body_color">
-                    <h3>No Audio is available.</h3>
-                </div>
-            {% endif %}
-        </div>
-    </div>
-    <!-- /.container -->
-
+        {% endfor %}
+    {% else %}
+        <h3>No Audio is available.</h3>
+    {% endif %}
     <!--
     {% if is_paginated %}
     <p>{{ paginator.count }} photos total.</p>
