--- a/wedding/templates/themes/default/pages/address_list.html
+++ b/wedding/templates/themes/default/pages/address_list.html
@@ -33,20 +33,16 @@
 {% endblock sidebar %}
 
 {% block content %}
-    <div class='container'>
-        <div class='row'>
-            {% for event, address, map_address, event_address in map_of_events %}
-                <div class="col-lg-3 col-md-4 col-xs-5 body_color">
-                    <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll={{map_address.0}},{{map_address.1}}&amp;spn=56.506174,79.013672&amp;t=m&amp;z=15&amp;output=embed"></iframe>
-                    <h3><b>{{event | capfirst }}</b></h3>
-                    {{address}}
-                    {% if logged_user.is_authenticated %}
-                        <form>
-                            <a href="{% url 'address_update' username=username pk=event_address.pk %}" class="btn btn-primary">Edit</a>
-                        </form>
-                    {% endif %}
-                </div>
-            {% endfor %}
+    {% for event, address, map_address, event_address in map_of_events %}
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 body_color">
+            <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll={{map_address.0}},{{map_address.1}}&amp;spn=56.506174,79.013672&amp;t=m&amp;z=15&amp;output=embed"></iframe>
+            <h3><b>{{event | capfirst }}</b></h3>
+            {{address}}
+            {% if logged_user.is_authenticated %}
+                <form>
+                    <a href="{% url 'address_update' username=username pk=event_address.pk %}" class="btn btn-primary">Edit</a>
+                </form>
+            {% endif %}<br><br>
         </div>
-    </div>
+    {% endfor %}
 {% endblock content %}
