--- a/wedding/templates/wedding.html
+++ b/wedding/templates/wedding.html
@@ -17,38 +17,32 @@
 {% endblock head %}
 
 {% block content %}
-    <div class='container'>
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-xs-8">
-                {% if wedding_objects %}
-                    <a href="{% url 'page_list' username=username %}" class="btn btn-success">Details Already Provided</a>
-                {% endif %}
-                <h2>Provide your details : </h2><br>
-                <form name="myForm" action="" onsubmit="return validateForm()" method="post">{% csrf_token %}
-                    <ul class="errorlist">
-                        {% if form.non_field_errors %}
-                            <li>{{ form.non_field_errors }}</li>
-                        {% endif %}
-                        {% for field in form %}
-                            {% if field.errors %}
-                                <li>
-                                    <b><i>{{ field.label }}</i></b>
-                                    <ul class="errorlist">
-                                    {% for error in field.errors %}
-                                        <li><b><i>{{ error }}</i></b></li>
-                                    {% endfor %}
-                                    </ul>
-                                </li>
-                            {% endif %}
+    {% if wedding_objects %}
+        <a href="{% url 'page_list' username=username %}" class="btn btn-success">Details Already Provided</a>
+    {% endif %}
+    <h2>Provide your details : </h2><br>
+    <form name="myForm" action="" onsubmit="return validateForm()" method="post">{% csrf_token %}
+        <ul class="errorlist">
+            {% if form.non_field_errors %}
+                <li>{{ form.non_field_errors }}</li>
+            {% endif %}
+            {% for field in form %}
+                {% if field.errors %}
+                    <li>
+                        <b><i>{{ field.label }}</i></b>
+                        <ul class="errorlist">
+                        {% for error in field.errors %}
+                            <li><b><i>{{ error }}</i></b></li>
                         {% endfor %}
-                    </ul>
-                    {% for field in form %}
-                        {{ field.label_tag }}<br>
-                        {{ field }}<br><br>
-                    {% endfor %}
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
+                        </ul>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+        {% for field in form %}
+            {{ field.label_tag }}<br>
+            {{ field }}<br><br>
+        {% endfor %}
+        <button type="submit" class="btn btn-primary">Submit</button><br><br><br>
+    </form>
 {% endblock %}
