Modified the templates and added premium themes option

--- a/wedding/templates/themes/default/index.html
+++ b/wedding/templates/themes/default/index.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load date_diff %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,9 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
+        <link rel="shortcut icon" type="image/png" href="{{MEDIA_URL}}images/default/favicon.ico"/>
 
-        <title>Wedding Website</title>
+        <title>Wedding Website - {% block title %}{%endblock%}</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
@@ -59,13 +60,16 @@
             {
                 text-align: right
             }
+            .img-responsive {
+                max-height: 500px; /* or to whatever you want here */
+            }
         </style>
     </head>
 
     <body>
-        <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -73,30 +77,39 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">Wedding Bells</a>
+                    <a href="/"><img class='img-responsive' src='{{MEDIA_URL}}images/default/logo.jpg'/></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="nav navbar-nav navbar-right">
                         {% block navbar_right %}
                         {% endblock %}
-                        <li class="active"><a href="/about/">About</a></li>
-                        <li class="active"><a href="/contact/">Contact</a></li>
+                        {% if logged_user.is_authenticated %}
+                            <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                            <li><a href="{% url 'theme_form' username=logged_user.username %}">Themes</a></li>
+                            {% if not is_member %}
+                                <li><a href="{% url 'payment_form' %}">Go Premium</a></li>
+                            {% endif %}
+                            <li><a href="/sunnyarora07/welcome" target='_blank'>Demo</a></li>
+                        {% endif %}
+                        <li><a href="/about/">About</a></li>
+                        <li><a href="/contact/">Contact</a></li>
+                        <li>&nbsp;&nbsp;&nbsp;</li>
                     </ul>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
 
-        <!-- Header Carousel -->
-        <header id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
+        <!-- Header Carousel>
+        <header id="myCarousel" class="carousel slide" data-ride="carousel"-->
+            <!-- Indicators >
             <ol class="carousel-indicators">
                 <li data-target="#WeddingCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#WeddingCarousel" data-slide-to="1"></li>
                 <li data-target="#WeddingCarousel" data-slide-to="2"></li>
-            </ol>
+            </ol-->
 
-            <!-- Wrapper for slides -->
+            <!-- Wrapper for slides >
             <div class="carousel-inner">
                 <div class="item active">
                     <div class="fill" style="background-image:url('/media/images/themes/slide_1.jpg');"></div>
@@ -116,16 +129,16 @@
                         <h1 class='header_color'></h2>
                     </div>
                 </div>
-            </div>
+            </div-->
 
-            <!-- Controls -->
+            <!-- Controls >
             <a class="left carousel-control" href="#WeddingCarousel" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <a class="right carousel-control" href="#WeddingCarousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
-        </header><br>
+        </header--><br><br>
 
         <div class='container'>
             <div class="row">
@@ -135,6 +148,16 @@
                     </ul>
                 </div>
                 <div class="col-lg-8 col-md-4 col-sm-6 col-xs-8 text_align text-center" style='font-style: italic;font-weight: bold;'>
+                    <h2 class='header_color'>
+                        {{wedding_objects.values.0.groom_first_name |capfirst}} <img src="{{MEDIA_URL}}images/default/weds.png"/> {{wedding_objects.values.0.bride_first_name|capfirst}}<br><br>
+                        {{wedding_objects.values.0.wedding_date}}
+                        {% if wedding_done == 'False' %}
+                            • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!
+                        {% endif %}
+                        {% if logged_user.is_authenticated %}
+                            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+                        {% endif %}
+                    </h2>
                     {% block heading %}
                     {% endblock %}<br><br>
                 </div>
@@ -142,20 +165,28 @@
                     {% block content %}
                     {% endblock %}
                 </div>
-            </div>
+            </div><br><br><br><br>
             <!-- /.row -->
         </div>
         <!-- /.container -->
 
-        <hr>
-        <div class="panel-footer clearfix navbar-fixed-bottom">
-            <div class="pull-right">
-        	    <a href="/">Home</a>
-            	<a href="/terms/">Terms of use</a>
-            	<a href="/privacy/">Privacy policy</a>
-            	<a href="/contact/">Contact us</a>
+        <div class='container'>
+		    <div class='row'>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="panel-footer clearfix navbar-fixed-bottom">
+                        <div class="pull-right">
+                            <a target='_blank' href="https://facebook.com/sunnyarora29"><i class="fa fa-facebook-square fa-2x"></i></a>
+                            <a target='_blank' href="https://www.linkedin.com/pub/sunny-arora/3a/a5/670"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                            <a target='_blank' href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
+                            <a target='_blank' href="https://github.com/sunnyar/wedding"><i class="fa fa-github-square fa-2x"></i></a>
+                    	    <a href="/">Home</a>
+                        	<a href="/terms/">Terms</a>
+                        	<a href="/privacy/">Privacy</a>
+                        </div>
+                        <p>Copyright © 2014 Wedding Bells</p>
+                    </div>
+                </div>
             </div>
-            <p>Copyright © 2014 Wedding Bells</p>
         </div>
 
 
@@ -165,5 +196,10 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+        <script type="text/javascript">
+        	$(document).ready(function(){
+        		$("#myModal").modal('show');
+        	});
+        </script>
     </body>
 </html>
