--- a/wedding/templates/contact.html
+++ b/wedding/templates/contact.html
@@ -1,194 +1,62 @@
+{% extends 'flat_pages_base.html' %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
 
-        <title>Wedding Website</title>
+{% block page_header %}Contact Us{% endblock %}
 
-        <!-- Bootstrap core CSS -->
-        <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
+{% block breadcrumb %}Contact{% endblock %}
 
-        <!-- Custom CSS -->
-        <link href="{{STATIC_URL}}css/modern-business.css" rel="stylesheet">
+{% block content %}
 
-        <!-- Custom Fonts -->
-        <link href="{{STATIC_URL}}font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Embedded Google Map -->
+    <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=26.4721135,80.318534&amp;spn=56.506174,79.013672&amp;t=m&amp;z=15&amp;output=embed"></iframe>
+    <!-- Contact Details Column -->
+    <h3>Contact Details</h3>
+    <p>
+        111A/104, Ashok Nagar<br>Kanpur, U.P 208012<br>
+    </p>
+    <p><i class="fa fa-phone"></i>
+        <abbr title="Phone">P</abbr>: (0512) 123-456</p>
+    <p><i class="fa fa-envelope-o"></i>
+        <abbr title="Email">E</abbr>: <a href="mailto:sunnyarora07@gmail.com">sunnyarora07@gmail.com</a>
+    </p>
+    <p><i class="fa fa-clock-o"></i>
+        <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
+    <ul class="list-unstyled list-inline list-social-icons">
+        <li>
+            <a href="https://www.facebook.com/sunnyarora29"><i class="fa fa-facebook-square fa-2x"></i></a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/pub/sunny-arora/3a/a5/670"><i class="fa fa-linkedin-square fa-2x"></i></a>
+        </li>
+        <li>
+            <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
+        </li>
+        <li>
+            <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
+        </li>
+    </ul>
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        {% block head %}{% endblock %}
-        <style>
-            @import url('/static/css/bootstrap.min.css');
+    <!-- Contact Form -->
+    <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
 
-            body{
-                background: url('/media/images/themes/bg_image.jpg') no-repeat center center fixed;
-                -webkit-background-size: cover;
-                -moz-background-size: cover;
-                -o-background-size: cover;
-                background-size: 100% 100%;
-            }
-            a.href_color {
-                color: #000;
-                &:hover {
-                color: #000;
-                }
-            }
-        </style>
-    </head>
-
-    <body>
-        <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">Wedding Bells</a>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        {% if not logged_user.is_authenticated %}
-                            <li class="active"><a href="{% url 'account_signup' %}">Join Free</a></li>
-                        {% endif %}
-                        {% block navbar_right %}
-                            <li class="active"><a href="{% url 'account_login' %}">Login</a></li>
-                        {% endblock %}
-                        <li class="active"><a href="/about/">About</a></li>
-                        <li class="active"><a href="/contact/">Contact</a></li>
-                        <li class="active"><div class="addthis_sharing_toolbox"></div></li>
-                    </ul>
+    <h3>Send us a Message</h3>
+    <form method="post" action="" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="control-group form-group">
+            <div class="controls form_control">
+                <div class="row">
+                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                        {% for field in form %}
+                            {{ field.label_tag }}<br>
+                            {{ field }}<br><br>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-        </nav>
+        </div><br>
 
-        <!-- Page Content -->
-        <div class="container">
-
-            <!-- Page Heading/Breadcrumbs -->
-            <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    {% for field in form %}
-                        <div class="fieldWrapper">
-                            {{ field.errors }}
-                        </div>
-                    {% endfor %}
-                    <h1 class="page-header">Contact
-                        <small></small>
-                    </h1>
-                    <ol class="breadcrumb">
-                        <li><a href="/">Home</a>
-                        </li>
-                        <li class="active">Contact</li>
-                    </ol>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <!-- Content Row -->
-            <div class="row">
-                <!-- Map Column -->
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                    <!-- Embedded Google Map -->
-                    <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=28.7210643,77.1154368&amp;spn=56.506174,79.013672&amp;t=m&amp;z=15&amp;output=embed"></iframe>
-                </div>
-                {% block base_img %}
-                {% endblock base_img %}
-                <!-- Contact Details Column -->
-                <div class="col-lg-8 col-md-8 col-xs-12">
-                    <h3>Contact Details</h3>
-                    <p>
-                        111A/104, Ashok Nagar<br>Kanpur, U.P 208012<br>
-                    </p>
-                    <p><i class="fa fa-phone"></i>
-                        <abbr title="Phone">P</abbr>: (0512) 123-456</p>
-                    <p><i class="fa fa-envelope-o"></i>
-                        <abbr title="Email">E</abbr>: <a href="mailto:sunnyarora07@gmail.com">sunnyarora07@gmail.com</a>
-                    </p>
-                    <p><i class="fa fa-clock-o"></i>
-                        <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
-                    <ul class="list-unstyled list-inline list-social-icons">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <!-- Contact Form -->
-            <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-            <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <h3>Send us a Message</h3>
-                    <form method="post" action="" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="control-group form-group">
-                            <div class="controls form_control">
-                                <div class="row">
-                                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                                        {% for field in form %}
-                                            {{ field.label_tag }}<br>
-                                            {{ field }}<br><br>
-                                        {% endfor %}
-                                    </div>
-                                </div>
-                            </div>
-                        </div><br>
-
-                        <div id="success"></div>
-                        <!-- For success/fail messages -->
-                        <button type="submit" class="btn btn-primary">Send Message</button><br><br><br>
-                    </form>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-
-        <hr>
-        <div class="panel-footer clearfix navbar-fixed-bottom">
-            <div class="pull-right">
-        	    <a href="/">Home</a>
-            	<a href="/terms/">Terms of use</a>
-            	<a href="/privacy/">Privacy policy</a>
-            	<a href="/contact/">Contact us</a>
-            </div>
-            <p>Copyright © 2014 Wedding Bells</p>
-        </div>
-
-
-
-        <!-- jQuery Version 1.11.0 -->
-        <script src="{{STATIC_URL}}js/jquery-1.11.0.js"></script>
-
-        <!-- Bootstrap Core JavaScript -->
-        <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
-
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <!--script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5404ad8148071059"></script-->
-        <script src="http://api.html5media.info/1.1.5/html5media.min.js"></script>
-    </body>
-</html>
+        <div id="success"></div>
+        <!-- For success/fail messages -->
+        <button type="submit" class="btn btn-primary">Send Message</button><br><br><br>
+    </form>
+{% endblock %}
