--- a/wedding/templates/flat_pages_base.html
+++ b/wedding/templates/flat_pages_base.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" type="image/png" href="{{MEDIA_URL}}images/default/favicon.ico"/>
 
-        <title>Wedding Website - SugnUp/Login</title>
+        <title>Wedding Website</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
@@ -29,12 +29,8 @@
         <style>
             @import url('/static/css/bootstrap.min.css');
 
-            .thumb {
-               margin-bottom: 30px;
-            }
-
             body{
-                background: url('/media/images/themes/bg_image1.jpg') no-repeat center center fixed;
+                background: url('/media/images/themes/bg_image.jpg') no-repeat center center fixed;
                 -webkit-background-size: cover;
                 -moz-background-size: cover;
                 -o-background-size: cover;
@@ -46,10 +42,13 @@
                 color: #000;
                 }
             }
-            div.body_color {
-                color: #000;
-            }
         </style>
+
+        <script>
+            function goBack() {
+                window.history.back()
+            }
+        </script>
     </head>
 
     <body>
@@ -68,7 +67,11 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/sunnyarora07/welcome" target='_blank'>Demo</a></li>
+                        {% if not logged_user.is_authenticated %}
+                            <li><a href="{% url 'account_signup' %}">Join Free</a></li>
+                        {% else %}
+                            <li><a href="{% url 'account_login' %}">Login</a></li>
+                        {% endif %}
                         <li><a href="/about/">About</a></li>
                         <li><a href="/contact/">Contact</a></li>
                         <li>&nbsp;&nbsp;&nbsp;</li>
@@ -76,15 +79,50 @@
                 </div>
             </nav>
         </div>
-        <br><br><br>
 
-        <div class='container'>
+        <!-- Page Content -->
+        <div class="container">
+
+            <!-- Page Heading/Breadcrumbs -->
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-4 col-md-4 col-md-offset-2 col-sm-6 col-sm-offset-2 col-xs-8 col-xs-offset-3 text_align body_color">
-                    {%block content %} {%endblock %}
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                    <br><br><button onclick="goBack()" type="submit" class="btn btn-primary">Go Back</button>
+                    <ul class="errorlist">
+                        {% if form.non_field_errors %}
+                            <li>{{ form.non_field_errors }}</li>
+                        {% endif %}
+                        {% for field in form %}
+                            {% if field.errors %}
+                                <ul class="errorlist">
+                                    {% for error in field.errors %}
+                                        <h3 style='color:red'><b><i>Error : {{error}}</i></b></h3>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        {% endfor %}
+                    </ul><br>
+                    <h1 class="page-header">{% block page_header %} {% endblock %}
+                        <small></small>
+                    </h1>
+                    <ol class="breadcrumb">
+                        <li><a href="/">Home</a>
+                        </li>
+                        <li class="active">{% block breadcrumb %} {% endblock %}</li>
+                    </ol>
                 </div>
             </div>
+            <!-- /.row -->
+
+            <!-- Content Row -->
+            <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                    {% block content %} {% endblock %}
+                </div>
+            </div><br><br>
+            <!-- /.row -->
         </div>
+        <!-- /.container -->
+
         <div class="panel-footer clearfix navbar-fixed-bottom">
             <div class="pull-right">
                 <a target='_blank' href="https://facebook.com/sunnyarora29"><i class="fa fa-facebook-square fa-2x"></i></a>
@@ -92,9 +130,8 @@
                 <a target='_blank' href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
                 <a target='_blank' href="https://github.com/sunnyar/wedding"><i class="fa fa-github-square fa-2x"></i></a>
         	    <a href="/">Home</a>
-            	<a href="/terms/">Terms of use</a>
-            	<a href="/privacy/">Privacy policy</a>
-            	<a href="/contact/">Contact us</a>
+            	<a href="/terms/">Terms</a>
+            	<a href="/privacy/">Privacy</a>
             </div>
             <p>Copyright © 2014 Wedding Bells</p>
         </div>
