--- a/wedding/templates/themes/default/audio/audio_list.html
+++ b/wedding/templates/themes/default/audio/audio_list.html
@@ -1,14 +1,7 @@
 {% extends "themes/default/index.html" %}
-{% load date_diff %}
 
 {% block head %}
     <style>
-                /*!
-         * Start Bootstrap - Thumbnail Gallery HTML Template (http://startbootstrap.com)
-         * Code licensed under the Apache License v2.0.
-         * For details, see http://www.apache.org/licenses/LICENSE-2.0.
-         */
-
         .thumb {
             margin-bottom: 20px;
         }
@@ -17,60 +10,74 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}audiofield/page-player/css/page-player.css" />
 
     <style type="text/css">
-      ul.playlist li a {
-        color: #333333;
-        display: block;
-        font-family: "Lucida Grande","DejaVu Sans","Bitstream Vera Sans","Verdana,Arial,sans-serif";
-        font-size: 12px;
-        vertical-align: top;
-      }
+        ul.playlist li a {
+            color: #333333;
+            display: block;
+            font-family: "Lucida Grande","DejaVu Sans","Bitstream Vera Sans","Verdana,Arial,sans-serif";
+            font-size: 12px;
+            vertical-align: top;
+        }
     </style>
+
     <!-- soundManager.useFlashBlock: related CSS -->
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}audiofield/flashblock/flashblock.css" />
     <script type="text/javascript" src="{{ STATIC_URL }}audiofield/script/soundmanager2.js"></script>
 
     <script>
-    /* --------
-      Config override: This demo uses shiny flash 9 stuff, overwriting Flash 8-based defaults
-      Alternate PP_CONFIG object must be defined before soundManager.onready()/onload() fire.
-      Alternately, edit the config in page-player.js to simply use the values below by default
-    -------- */
+        /* --------
+          Config override: This demo uses shiny flash 9 stuff, overwriting Flash 8-based defaults
+          Alternate PP_CONFIG object must be defined before soundManager.onready()/onload() fire.
+          Alternately, edit the config in page-player.js to simply use the values below by default
+        -------- */
 
-    // demo only, but you can use these settings too..
-    soundManager.flashVersion = 9;
-    soundManager.preferFlash = true; // for visualization effects
-    soundManager.useHighPerformance = true; // keep flash on screen, boost performance
-    soundManager.wmode = 'transparent'; // transparent SWF, if possible
-    soundManager.useFastPolling = true; // increased JS callback frequency
-    soundManager.url = {{ STATIC_URL }}+'audiofield/swf/';
-    soundManager.debugFlash = false;
-    soundManager.debugMode = false;
-    // Added
-    //soundManager.useHTML5Audio = false;
+        // demo only, but you can use these settings too..
+        soundManager.flashVersion = 9;
+        soundManager.preferFlash = true; // for visualization effects
+        soundManager.useHighPerformance = true; // keep flash on screen, boost performance
+        soundManager.wmode = 'transparent'; // transparent SWF, if possible
+        soundManager.useFastPolling = true; // increased JS callback frequency
+        soundManager.url = {{ STATIC_URL }}+'audiofield/swf/';
+        soundManager.debugFlash = false;
+        soundManager.debugMode = false;
+        // Added
+        soundManager.useHTML5Audio = false;
 
-    // custom page player configuration
+        // custom page player configuration
 
-    var PP_CONFIG = {
-      autoStart: false,      // begin playing first sound when page loads
-      playNext: false,        // stop after one sound, or play through list until end
-      useThrottling: false,  // try to rate-limit potentially-expensive calls (eg. dragging position around)</span>
-      usePeakData: true,     // [Flash 9 only] whether or not to show peak data (left/right channel values) - nor noticable on CPU
-      useWaveformData: false,// [Flash 9 only] show raw waveform data - WARNING: LIKELY VERY CPU-HEAVY
-      useEQData: false,      // [Flash 9 only] show EQ (frequency spectrum) data
-      useFavIcon: false,     // try to apply peakData to address bar (Firefox + Opera) - performance note: appears to make Firefox 3 do some temporary, heavy disk access/swapping/garbage collection at first(?) - may be too heavy on CPU
-      useMovieStar: true     // Flash 9.0r115+ only: Support for a subset of MPEG4 formats.
-    }
-    </script>
+        var PP_CONFIG = {
+          autoStart: false,      // begin playing first sound when page loads
+          playNext: false,        // stop after one sound, or play through list until end
+          useThrottling: false,  // try to rate-limit potentially-expensive calls (eg. dragging position around)</span>
+          usePeakData: true,     // [Flash 9 only] whether or not to show peak data (left/right channel values) - nor noticable on CPU
+          useWaveformData: false,// [Flash 9 only] show raw waveform data - WARNING: LIKELY VERY CPU-HEAVY
+          useEQData: false,      // [Flash 9 only] show EQ (frequency spectrum) data
+          useFavIcon: false,     // try to apply peakData to address bar (Firefox + Opera) - performance note: appears to make Firefox 3 do some temporary, heavy disk access/swapping/garbage collection at first(?) - may be too heavy on CPU
+          useMovieStar: true     // Flash 9.0r115+ only: Support for a subset of MPEG4 formats.
+        }
+        </script>
 
-    <script type="text/javascript" src="{{ STATIC_URL }}audiofield/page-player/script/page-player.js"></script>
-    <script type="text/javascript">
+        <script type="text/javascript" src="{{ STATIC_URL }}audiofield/page-player/script/page-player.js"></script>
+        <script type="text/javascript">
 
-    // demo only..
-    function setTheme(sTheme) {
-      var o = document.getElementsByTagName('ul')[0];
-      o.className = 'playlist'+(sTheme?' '+sTheme:'');
-      return false;
-    }
+        // demo only..
+        function setTheme(sTheme) {
+          var o = document.getElementsByTagName('ul')[0];
+          o.className = 'playlist'+(sTheme?' '+sTheme:'');
+          return false;
+        }
+
+
+        function changeIcon(audio_num) {
+            var icon = document.getElementById("icon_change_" + audio_num).className;
+            if  (icon == 'glyphicon glyphicon-play-circle')
+            {
+                document.getElementById("icon_change_" + audio_num).className = 'glyphicon glyphicon-pause';
+            }
+            else
+            {
+                document.getElementById("icon_change_" + audio_num).className = 'glyphicon glyphicon-play-circle';
+            }
+        }
     </script>
 {% endblock %}
 
@@ -81,24 +88,10 @@
         {% if object_list_len > 20 %}
             <li><a href="">Max Audio Files Added</a></li>
         {% else %}
-            <li class="active"><a href="{% url 'audio_create' username=logged_user.username %}">Add Audio (Max: 20)</a></li>
+            <li><a href="{% url 'audio_create' username=logged_user.username %}">Add Audio (Max: 20)</a></li>
         {% endif %}
-        <li class="active"><a href="{% url 'account_logout' %}">Logout</a></li>
-        <li class="active"><a href="{% url 'theme_form' username=logged_user.username %}">Themes</a></li>
-        <li class="active"><a href="{% url 'payment_form' %}">Go Premium</a></li>
-        <li class="active"><a href="/sunnyarora07/welcome" target='_blank'>Demo</a></li>
     {% endif %}
 {% endblock navbar_right %}
-
-{% block heading %}
-    <h2 class='header_color'>
-        {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
-        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!<br>
-        {% if logged_user.is_authenticated %}
-            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
-        {% endif %}
-    </h2>
-{% endblock %}
 
 {% block sidebar %}
     {% for page in page_list %}
@@ -124,7 +117,10 @@
     {% if object_list %}
         {% for audio in object_list %}
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-8 thumb">
-                <a class='href_color' href='{{MEDIA_URL}}{{audio.audio_file}}'>{{audio.name}}</a>
+                <a class='href_color' href='{{MEDIA_URL}}{{audio.audio_file}}'>{{audio.name}}</a><br>
+                <a class='href_color' href='{{MEDIA_URL}}{{audio.audio_file}}'>
+                    <span id='icon_change_{{forloop.counter}}' class="glyphicon glyphicon-play-circle" onclick="changeIcon({{forloop.counter}})"></span><br>
+                </a>
                 {% if logged_user.is_authenticated %}
                     <form action="{% url 'audio_update' username=logged_user.username pk=audio.pk %}">
                         <input type="submit" value="Edit Audio" class="btn btn-primary">
