--- a/wedding/templates/themes/default/pages/page_detail.html
+++ b/wedding/templates/themes/default/pages/page_detail.html
@@ -1,15 +1,8 @@
 {% extends "themes/default/index.html" %}
-{% load date_diff %}
 
 {% block navbar_right %}
-    {% if logged_user.is_authenticated %}
-        {% if page.title != 'HomePage' %}
-            <li class="active"><a href="{% url 'page_update' username=logged_user.username slug=object.slug %}" class="btn">Edit Page</a></li>
-        {% endif %}
-        <li class="active"><a href="{% url 'account_logout' %}">Logout</a></li>
-        <li class="active"><a href="{% url 'theme_form' username=logged_user.username %}">Themes</a></li>
-        <li class="active"><a href="{% url 'payment_form' %}">Go Premium</a></li>
-        <li class="active"><a href="/sunnyarora07/welcome" target='_blank'>Demo</a></li>
+    {% if logged_user.is_authenticated and page.title != 'HomePage' %}
+        <li><a href="{% url 'page_update' username=logged_user.username slug=object.slug %}" class="btn">Edit Page</a></li>
     {% endif %}
 {% endblock navbar_right %}
 
@@ -25,15 +18,6 @@
     {% endfor %}
 {% endblock %}
 
-{% block heading %}
-    <h2 class='header_color'>
-        {{wedding_objects.values.0.groom_first_name |capfirst}} Ẃἔḋṩ  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
-        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!<br>
-        {% if logged_user.is_authenticated %}
-            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
-        {% endif %}
-    </h2>
-{% endblock %}
 
 {% block content %}
     {% if object.image == '' %}
