--- a/wedding/templates/themes/default/pages/page_list.html
+++ b/wedding/templates/themes/default/pages/page_list.html
@@ -2,21 +2,20 @@
 {% load date_diff %}
 
 {% block heading %}
-    <h2 class='header_color'>
-        {{wedding_objects.values.0.groom_first_name|capfirst}} Ẃἔḋṩ  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
-        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!<br>
-    </h2>
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="modal-title">Welcome {{logged_user.username}}</h3>
+                </div>
+                <div class="modal-body">
+                    <p class="text-warning"><large>Start Customzing your Website</large></p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
-
-{% block navbar_right %}
-    {% if logged_user.is_authenticated %}
-        <li class="active"><a href="{% url 'account_logout' %}">Logout</a></li>
-        <li class="active"><a href="{% url 'theme_form' username=logged_user.username %}">Themes</a></li>
-        <li class="active"><a href="{% url 'payment_form' %}">Go Premium</a></li>
-        <li class="active"><a href="/sunnyarora07/welcome" target='_blank'>Demo</a></li>
-    {% endif %}
-{% endblock navbar_right %}
-
 
 {% block sidebar %}
     {% for page in object_list.values %}
