--- a/wedding/templates/themes/default/photologue/photo_list.html
+++ b/wedding/templates/themes/default/photologue/photo_list.html
@@ -1,6 +1,5 @@
 {% extends "themes/default/index.html" %}
 {% load url from future %}
-{% load date_diff %}
 
 {% block head %}
     <style>
@@ -17,24 +16,10 @@
         {% if object_list_len > 20 %}
             <li><a href="">Max Photos Added</a></li>
         {% else %}
-            <li class="active"><a href="{% url 'photo_create' username=logged_user.username %}">Add Photos (Max: 20)</a></li>
+            <li><a href="{% url 'photo_create' username=logged_user.username %}">Add Photos (Max: 20)</a></li>
         {% endif %}
-        <li class="active"><a href="{% url 'account_logout' %}">Logout</a></li>
-        <li class="active"><a href="{% url 'theme_form' username=logged_user.username %}">Themes</a></li>
-        <li class="active"><a href="{% url 'payment_form' %}">Go Premium</a></li>
-        <li class="active"><a href="/sunnyarora07/welcome" target='_blank'>Demo</a></li>
     {% endif %}
 {% endblock navbar_right %}
-
-{% block heading %}
-    <h2 class='header_color'>
-        {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
-        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!<br>
-        {% if logged_user.is_authenticated %}
-            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
-        {% endif %}
-    </h2>
-{% endblock %}
 
 {% block sidebar %}
     {% for page in page_list %}
